add example for project