@@ -4,3 +4,15 @@ Older adult who lives alone in his home and performs different daily activities.
 While doing the activities suffers falls at home.
 
 ![Older adult Home](https://github.com/mfcardenas/phat_example_oph01/blob/master/img/img_older_people_home.png)
+
+To run the demo
+
+```
+mvn clean compile
+mvn exec:java -Dexec.mainClass=phat.OldPeopleHome
+```
+In case of running into memory problems
+```
+export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+```
+And then run the previous command
